# scratch2test

./: .gitignore  client.go  client_test.go  go.mod  go.sum  main.go  main.py  nuts.go  package-lock.json  package.json  pyproject.toml  robot_name.go  tree_building.go
assets/: neko_webm_v1_file_127031257.webm  neko_webm_v1_file_127031555.webm  neko_webm_v1_file_127031556.webm  neko_webm_v1_file_127031557.webm  neko_webm_v1_file_127031558.webm  neko_webm_v1_file_127031559.webm  neko_webm_v1_file_127031560.webm  neko_webm_v1_file_127031561.webm  neko_webm_v1_file_127031562.webm  neko_webm_v1_file_127031563.webm  neko_webm_v1_file_127031564.webm  neko_webm_v1_file_127031565.webm  neko_webm_v1_file_127031566.webm  neko_webm_v1_file_127031567.webm  neko_webm_v1_file_127031568.webm  neko_webm_v1_file_127031569.webm  neko_webm_v1_file_127031570.webm  neko_webm_v1_file_127031571.webm  neko_webm_v1_file_127031572.webm  neko_webm_v1_file_127031573.webm  neko_webm_v1_file_127031574.webm  neko_webm_v1_file_127031575.webm  neko_webm_v1_file_127031576.webm  neko_webm_v1_file_127031577.webm  neko_webm_v1_file_127031578.webm  neko_webm_v1_file_127031579.webm  neko_webm_v1_file_127031580.webm  neko_webm_v1_file_127031581.webm  neko_webm_v1_file_127031582.webm  neko_webm_v1_file_127031583.webm  neko_webm_v1_file_127031584.webm  neko_webm_v1_file_127031585.webm  neko_webm_v1_file_127031586.webm  neko_webm_v1_file_127031587.webm  neko_webm_v1_file_127031588.webm  neko_webm_v1_file_127031589.webm  neko_webm_v1_file_127031590.webm  neko_webm_v1_file_127031591.webm  neko_webm_v1_file_127031592.webm  neko_webm_v1_file_127031593.webm  (+10 more)
cache/: bloom.go  bloom_test.go
cpp/: main.cpp  number.cpp
crawler/api/: m1.py
crawler/puppeteer/: app.js  file.csv  m1.js
cron/: template.py
cryptosquare/: crypto_square.go
ds/: vector.cpp
dsa/: .clang-format  .gitignore  CMakeLists.txt  README.md
dsa/benchmarks/: CMakeLists.txt
dsa/docs/: ROADMAP.md  structure.md
dsa/examples/: CMakeLists.txt
dsa/include/algorithms/: .template.h
dsa/include/data_structures/: .template.h  deque.h  hash_table.h  vector.h
dsa/include/dsa/data_structures/arrays/: mvector.hpp
dsa/include/dsa/data_structures/hash_tables/: hash_table.hpp
dsa/include/hash_tables/: hash_table.hpp
dsa/src/: CMakeLists.txt
dsa/templates/: data_structure.hpp  unit_test.cpp
dsa/tests/: CMakeLists.txt  test_utils.hpp
dsa/tests/algorithms/: .template.cpp
dsa/tests/data_structures/: .template.cpp  test_hash_table.cpp  test_vector.cpp
dsa/tests/unit/: hash_table_test.cpp
exercism/cryptosquare/: crypto_square_test.go
exercism/matrix/: matrix.go  matrix_test.go
exercism/meetup/: meetup.go  meetup_test.go
exercism/robot_name/: robot_name.go  robot_name_test.go
exercism/tree_building/: tree_building.go
exercism/wordy/: wordy.go  wordy_test.go  wordy_tree_test.go
k6/: script.js
lc/: main.py
lc/array/: 1-bit-and-2-bit-characters.py  adjacent-increasing-subarrays-detection-i.py  adjacent-increasing-subarrays-detection-ii.py  build-array-from-permutation.py  check-if-all-1s-are-at-least-length-k-places-away.py  check-if-array-is-sorted-and-rotated.py  check-if-digits-are-equal-in-string-after-operations-i.py  class Solution:.py  closest-equal-element-queries.py  closest-prime-numbers-in-range.py  contiguous-array.py  count-common-words-with-one-occurrence.py  count-good-triplets.py  count-largest-group.py  count-negative-numbers-in-a-sorted-matrix.py  count-number-of-bad-pairs.py  count-of-interesting-subarrays.py  count-special-triplets.py  count-submatrices-with-equal-frequency-of-x-and-y.py  count-submatrices-with-top-left-element-and-sum-less-than-k.py  count-symmetric-integers.py  count-the-hidden-sequences.py  count-the-number-of-special-characters-i.py  count-the-number-of-special-characters-ii.py  count-unguarded-cells-in-the-grid.py  count-vowel-strings-in-ranges.py  cyclically-rotating-a-grid.py  design-a-number-container-system.py  divide-players-into-teams-of-equal-skill.py  divisible-and-non-divisible-sums-difference.py  find-maximum-balanced-xor-subarray-length.py  find-missing-and-repeated-values.py  find-missing-observations.py  find-n-unique-integers-sum-up-to-zero.py  find-numbers-with-even-number-of-digits.py  find-resultant-array-after-removing-anagrams.py  find-the-maximum-number-of-elements-in-subset.py  find-the-minimum-area-to-cover-all-ones-i.py  find-the-number-of-distinct-colors-among-the-balls.py  find-the-prefix-common-array-of-two-arrays.py  (+88 more)
lc/backtracking/: 24-game.py  all-paths-from-source-to-target.py  check-if-number-is-a-sum-of-powers-of-three.py  combination-sum-ii.py  combination-sum.py  combinations.py  construct-smallest-number-from-di-string.py  construct-the-lexicographically-largest-valid-sequence.py  count-number-of-maximum-bitwise-or-subsets.py  find-the-punishment-number-of-an-integer.py  find-unique-binary-string.py  generate-parentheses.py  n-queens.py  palindrome-partitioning.py  permutations-ii.py  permutations.py  split-a-string-into-the-max-number-of-unique-substrings.py  subsets.py  sudoku-solver.py  sum-of-all-subset-xor-totals.py  the-k-th-lexicographical-string-of-all-happy-strings-of-length-n.py
lc/bfs/: binary-tree-right-side-view.py  build-a-matrix-with-conditions.py  cheapest-flights-within-k-stops.py  clone-graph.py  course-schedule.py  island-perimeter.py  kth-largest-sum-in-a-binary-tree.py  number-of-islands.py  perfect-squares.py  shortest-distance-after-road-addition-queries-i.py  the-maze.py
lc/binary_search/: binary-number-with-alternating-bits.py  binary-search.py  capacity-to-ship-packages-within-d-days.py  count-complete-tree-nodes.py  count-good-triplets-in-an-array.py  count-of-range-sum.py  count-the-number-of-fair-pairs.py  find-first-and-last-position-of-element-in-sorted-array.py  (+41 more)
socket/: server.go
uml/: drive_download.puml  drive_upload.puml
wordy/: wordy.go  wordy_test.go  wordy_tree.go
yt/: main.py  songs.csv
(+678 files in other folders)
